creusot/tests/should_fail/prusti/deref/box1.stderr
error[creusot]: `&'pre u32` cannot be moved from `'pre` to `'post` since it doesn't live long enough
                `'pre` doesn't outlive `'post`
  --> box1.rs:14:22
   |
14 | #[ensures(result == *old(x.0.mk_ref()))]
   |                      ^^^^^^^^^^^^^^^^^

error: aborting due to previous error

